support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_namespace_alias.i
%module xxx

namespace blah {
}

namespace B = blah;

namespace B {
}





